Algunos avances en HTML

--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
 <body>
     
         <button onclick="primerClick()">Primer click</button>
+        <br>
 
         <div>
         <label> ¿Han egresado hombres de Laboratoria?
             <input type="text"> <br>
         </label>
-            <input type="text"><br>
-            <input type="text">
+        <label> ¿Hay Laboratoria en Concepción?
+            <input type="text"> <br>
+        </label>    
+            <label> ¿Han egresado hombres de Laboratoria?
+        </label>
         </div>
+        <button onclick="primerClick()">Enviar respuestas</button>
 
     <div id="upperBar">
         <span id="nameLabel">Nombre : </span>
